# twoagents

./: README.md  main.fdb_latexmk  main.fls  main.py  main.tex  module_relation.tex  module_relation_full.tex  parl.md  pyproject.toml  rotating-cube_svg-tex.pdf_tex  second.txt  transcript_20260203_014114.jsonl
.texmf-cache/luatex-cache/generic/fonts/otl/: lmroman10-regular.lua  lmroman10-regular.luc  lmroman12-bold.lua  lmroman12-bold.luc  lmroman12-regular.lua  lmroman12-regular.luc  lmroman17-regular.lua  lmroman17-regular.luc
tools/: callgraph.py
twobotschat/: agents.py  main.py  ollama_client.py  orchestrator.py
